<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.framgia.soundclound.screen.main.MainViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.framgia.soundclound.screen.main.MainActivity">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            selectedColor="@{viewModel.tabSelectedColor}"
            unSelectedColor="@{viewModel.tabUnSelectedColor}"
            setTabHome="@{viewModel.tabSelectedHome}"
            viewPager="@{viewPager}">

            <android.support.design.widget.TabItem
                android:text="@string/title_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:icon="@drawable/ic_favorite_gray_24dp" />

            <android.support.design.widget.TabItem
                android:text="@string/title_playlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:icon="@drawable/ic_favorite_gray_24dp" />

            <android.support.design.widget.TabItem
                android:text="@string/title_local"
                android:icon="@drawable/ic_favorite_gray_24dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.design.widget.TabItem
                android:text="@string/title_favorite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:icon="@drawable/ic_favorite_gray_24dp"
                />

        </android.support.design.widget.TabLayout>

        <com.framgia.soundclound.widget.IsSwipeViewPager
            android:id="@+id/view_pager"
            pagerAdapter="@{viewModel.pagerAdapter}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:isEnableSwipe="false" />

    </LinearLayout>
</layout>

