<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@drawable/background_item_recycleview"
    android:orientation="horizontal"
    android:padding="@dimen/dp_8"
    android:weightSum="7">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_name_track"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_name_artist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/img_prev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/image_track"
        android:src="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/img_pause"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/title_next"
        android:src="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/img_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/img_notifi"
        android:src="@android:drawable/ic_media_next" />

    <ImageButton
        android:id="@+id/img_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/img_notifi"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />
</LinearLayout>